--- a/src/main/resources/prop/contentpage_ru.properties
+++ b/src/main/resources/prop/contentpage_ru.properties
@@ -1,38 +1,47 @@
 ### HEADER ###
-title.home=Домашняя
-title.login=Логин
-title.register=Регистрация
-label.home=домашняя
-label.cars=автомобили
-label.login=войти
-label.logout=выйти
+title.brand_name=Car|Book
+title.locale_ru=|\u0420\u0423
+title.locale_en=|EN
+title.home=\u0414\u043E\u043C\u0430\u0448\u043D\u044F\u044F - Car|Book
+title.login=\u041B\u043E\u0433\u0438\u043D - Car|Book
+title.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F - Car|Book
+title.cars=\u0410\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u0438 - Car|Book
+title.office=\u041A\u0430\u0431\u0438\u043D\u0435\u0442 - Car|Book
+label.home=\u0434\u043E\u043C\u0430\u0448\u043D\u044F\u044F
+label.cars=\u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u0438
+label.office=\u043A\u0430\u0431\u0438\u043D\u0435\u0442
+label.login=\u0432\u043E\u0439\u0442\u0438
+label.logout=\u0432\u044B\u0439\u0442\u0438
 ### HOME ###
-home.slogan=Вы арендуете больше чем автомобиль
-home.service=Мы готовы помочь Вам 24/7
-home.quality=Только новые автомобили, только отличный сервис
-home.appeal=Давайте подберем Вам автомобиль
-home.form.date_from=ДАТА С
-home.form.date_to=ДАТА ПО
-home.form.car_type=ТИП АВТО
-home.form.search=ПОИСК АВТО
+home.service=\u041C\u044B \u0433\u043E\u0442\u043E\u0432\u044B \u043F\u043E\u043C\u043E\u0447\u044C \u0412\u0430\u043C 24/7
+home.quality=\u0422\u043E\u043B\u044C\u043A\u043E \u043D\u043E\u0432\u044B\u0435 \u0430\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u0438, \u0442\u043E\u043B\u044C\u043A\u043E \u043E\u0442\u043B\u0438\u0447\u043D\u044B\u0439 \u0441\u0435\u0440\u0432\u0438\u0441
+home.form.car_type=\u0422\u0418\u041F \u0410\u0412\u0422\u041E
+home.form.search=\u041F\u041E\u0418\u0421\u041A \u0410\u0412\u0422\u041E
 ### LOGIN ###
-login.email=ЭЛ.ПОЧТА
-login.password=ПАРОЛЬ
-login.log_in=ВОЙТИ
-login.no_account=У Вас нет аккаунта?
-login.not_authorized=Неверные имя пользователя или пароль
+login.email=\u042D\u041B.\u041F\u041E\u0427\u0422\u0410
+login.password=\u041F\u0410\u0420\u041E\u041B\u042C
+login.log_in=\u0412\u041E\u0419\u0422\u0418
+login.no_account=\u0423 \u0412\u0430\u0441 \u043D\u0435\u0442 \u0430\u043A\u043A\u0430\u0443\u043D\u0442\u0430?
+login.not_authorized=\u041D\u0435\u0432\u0435\u0440\u043D\u044B\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+login.activated_user=\u0412\u0430\u0448\u0430 \u0443\u0447\u0435\u0442\u043D\u0430\u044F \u0437\u0430\u043F\u0438\u0441\u044C \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0430\u043A\u0442\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u043D\u0430, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u043E\u0439\u0434\u0438\u0442\u0435 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443
+login.not_activated_user=\u041D\u0435\u0443\u0441\u043F\u0435\u0448\u043D\u0430\u044F \u0430\u043A\u0442\u0438\u0432\u0430\u0446\u0438\u044F \u0443\u0447\u0435\u0442\u043D\u043E\u0439 \u0437\u0430\u043F\u0438\u0441\u0438, \u0434\u043B\u044F \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430 \u0441\u0442\u0430\u0442\u0443\u0441\u0430 \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u043E\u0439\u0434\u0438\u0442\u0435 \u0432 \u0441\u0438\u0441\u0442\u0435\u043C\u0443
 ### REGISTER ###
-register.email=ЭЛ.ПОЧТА
-register.password=ПАРОЛЬ
-register.confirm_password=ПОДТВЕРЖДЕНИЕ ПАРОЛЯ
-register.first_name=ИМЯ
-register.second_name=ФАМИЛИЯ
-register.driver_license=ВОД. УДОСТОВЕРЕНИЕ
-register.phone_number=НОМЕР ТЕЛЕФОНА
-register.register=ЗАРЕГИСТРИРОВАТЬСЯ
-register.invalid_parameters=Введенные вами данные некорректны. Проверьте ввод
+register.email=\u042D\u041B.\u041F\u041E\u0427\u0422\u0410
+register.password=\u041F\u0410\u0420\u041E\u041B\u042C
+register.confirm_password=\u041F\u041E\u0414\u0422\u0412\u0415\u0420\u0416\u0414\u0415\u041D\u0418\u0415 \u041F\u0410\u0420\u041E\u041B\u042F
+register.first_name=\u0418\u041C\u042F
+register.second_name=\u0424\u0410\u041C\u0418\u041B\u0418\u042F
+register.driver_license=\u0412\u041E\u0414. \u0423\u0414\u041E\u0421\u0422\u041E\u0412\u0415\u0420\u0415\u041D\u0418\u0415
+register.phone_number=\u041D\u041E\u041C\u0415\u0420 \u0422\u0415\u041B\u0415\u0424\u041E\u041D\u0410
+register.register=\u0417\u0410\u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0418\u0420\u041E\u0412\u0410\u0422\u042C\u0421\u042F
+register.invalid_parameters=\u0412\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0435 \u0432\u0430\u043C\u0438 \u0434\u0430\u043D\u043D\u044B\u0435 \u043D\u0435\u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u044B. \u041F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u0432\u0432\u043E\u0434
+### CARS ###
+cars.date_from=\u0414\u0430\u0442\u0430 \u0441
+cars.date_to=\u0414\u0430\u0442\u0430 \u043F\u043E
+cars.type=\u0422\u0438\u043F \u0430\u0432\u0442\u043E
+cars.filter=\u0424\u0438\u043B\u044C\u0442\u0440
 ### FOOTER ###
-footer.copyright=Все права защищены
+footer.copyright=\u0412\u0441\u0435 \u043F\u0440\u0430\u0432\u0430 \u0437\u0430\u0449\u0438\u0449\u0435\u043D\u044B &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
-input.email=Введенная строка не соответствует адресу электронной почты
-input.password=Пароль должен содержать минимум одно число и одну букву в верхнем регистре, минимальная длина 8 символов
+input.email=\u0412\u0432\u0435\u0434\u0435\u043D\u043D\u0430\u044F \u0441\u0442\u0440\u043E\u043A\u0430 \u043D\u0435 \u0441\u043E\u043E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0443\u0435\u0442 \u0430\u0434\u0440\u0435\u0441\u0443 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
+input.password=\u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043C\u0438\u043D\u0438\u043C\u0443\u043C \u043E\u0434\u043D\u043E \u0447\u0438\u0441\u043B\u043E \u0438 \u043E\u0434\u043D\u0443 \u0431\u0443\u043A\u0432\u0443 \u0432 \u0432\u0435\u0440\u0445\u043D\u0435\u043C \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0435, \u043C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u043D\u0430\u044F \u0434\u043B\u0438\u043D\u0430 8 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432
