--- a/src/main/resources/prop/contentpage_ru.properties
+++ b/src/main/resources/prop/contentpage_ru.properties
@@ -41,12 +41,29 @@ cars.date_to=\u0414\u0430\u0442\u0430 \u043F\u043E
 cars.type=\u0422\u0438\u043F \u0430\u0432\u0442\u043E
 cars.price_range=\u0414\u0438\u0430\u043F\u0430\u0437\u043E\u043D \u0446\u0435\u043D
 cars.filter=\u0424\u0438\u043B\u044C\u0442\u0440
+cars.model=\u041C\u043E\u0434\u0435\u043B\u044C
+cars.fuel_consumption=\u0420\u0430\u0441\u0445\u043E\u0434 \u0442\u043E\u043F\u043B\u0438\u0432\u0430 (\u043B/100\u043A\u043C)
+cars.cost=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C ($/\u0434\u0435\u043D\u044C)
+cars.number_seats=\u041A\u043E\u043B-\u0432\u043E \u043C\u0435\u0441\u0442
+cars.order=\u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C
 cars.car_type.any=\u041B\u042E\u0411\u041E\u0419
 cars.car_type.suv=\u0412\u041D\u0415\u0414\u041E\u0420\u041E\u0416\u041D\u0418\u041A
 cars.car_type.sedan=\u0421\u0415\u0414\u0410\u041D
 cars.car_type.minivan=\u041C\u0418\u041A\u0420\u041E\u0410\u0412\u0422\u041E\u0411\u0423\u0421
 cars.choose_params=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435, \u043F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0436\u0435\u043B\u0430\u0435\u043C\u044B\u0439 \u043F\u0435\u0440\u0438\u043E\u0434 \u0430\u0440\u0435\u043D\u0434\u044B
 cars.nothing_to_show=\u041F\u043E \u0434\u0430\u043D\u043D\u044B\u043C \u043A\u0440\u0438\u0442\u0435\u0440\u0438\u044F\u043C \u043D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0445 \u0430\u0432\u0442\u043E \u0434\u043B\u044F \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430
+### ORDER ###
+order.date_from=\u0414\u0430\u0442\u0430 \u0441
+order.date_to=\u0414\u0430\u0442\u0430 \u043F\u043E
+order.client_first_name=\u0418\u043C\u044F
+order.client_second_name=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+order.car_model=\u041C\u043E\u0434\u0435\u043B\u044C
+order.car_type=\u0422\u0438\u043F
+order.fuel=\u0422\u0438\u043F \u0442\u043E\u043F\u043B\u0438\u0432\u0430
+order.fuel_consumption=\u0420\u0430\u0441\u0445\u043E\u0434 (\u043B/100\u043A\u043C)
+order.number_seats=\u041A\u043E\u043B-\u0432\u043E \u043C\u0435\u0441\u0442
+order.amount=\u0421\u0443\u043C\u043C\u0430 \u0437\u0430\u043A\u0430\u0437\u0430
+order.order_car=\u0417\u0430\u043A\u0430\u0437\u0430\u0442\u044C
 ### FOOTER ###
 footer.copyright=\u0412\u0441\u0435 \u043F\u0440\u0430\u0432\u0430 \u0437\u0430\u0449\u0438\u0449\u0435\u043D\u044B &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
