--- a/src/main/resources/prop/contentpage_ru.properties
+++ b/src/main/resources/prop/contentpage_ru.properties
@@ -3,6 +3,7 @@ title.brand_name=Car|Book
 title.locale_ru=|\u0420\u0423
 title.locale_en=|EN
 title.home=\u0414\u043E\u043C\u0430\u0448\u043D\u044F\u044F - Car|Book
+title.orders=Orders - Car|Book
 title.login=\u041B\u043E\u0433\u0438\u043D - Car|Book
 title.register=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F - Car|Book
 title.cars=\u0410\u0432\u0442\u043E\u043C\u043E\u0431\u0438\u043B\u0438 - Car|Book
@@ -35,7 +36,7 @@ register.driver_license=\u0412\u041E\u0414. \u0423\u0414\u041E\u0421\u0422\u041E
 register.phone_number=\u041D\u041E\u041C\u0415\u0420 \u0422\u0415\u041B\u0415\u0424\u041E\u041D\u0410
 register.register=\u0417\u0410\u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0418\u0420\u041E\u0412\u0410\u0422\u042C\u0421\u042F
 register.invalid_parameters=\u0412\u0432\u0435\u0434\u0435\u043D\u043D\u044B\u0435 \u0432\u0430\u043C\u0438 \u0434\u0430\u043D\u043D\u044B\u0435 \u043D\u0435\u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u044B. \u041F\u0440\u043E\u0432\u0435\u0440\u044C\u0442\u0435 \u0432\u0432\u043E\u0434
-### CARS ###
+### CLIENT_CARS ###
 cars.date_from=\u0414\u0430\u0442\u0430 \u0441
 cars.date_to=\u0414\u0430\u0442\u0430 \u043F\u043E
 cars.type=\u0422\u0438\u043F \u0430\u0432\u0442\u043E
