--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -12,6 +12,7 @@ title.users=Users - Car|Book
 title.car=Car - Car|Book
 title.create_car=Create Car - Car|Book
 title.error=Error - Car|Book
+title.notification=Notification - Car|Book
 label.home=HOME
 label.cars=CARS
 label.login=LOG IN
@@ -59,6 +60,7 @@ cars.filter=Filter
 cars.order=Order
 cars.model=Model
 cars.fuel_consumption=Consumption (l/100km)
+cars.fuel_type=Fuel Type
 cars.cost=Cost ($/Day)
 cars.number_seats=Number Seats
 cars.car_type.any=Any
@@ -102,6 +104,7 @@ client_orders.table.car_model=Car Model
 client_orders.table.status=Status
 client_orders.table.pay=PAY
 client_orders.nothing_to_show=You have no any orders
+client_orders.authorize=To order a car please log in
 client_orders.successfully_paid=The order was successfully paid for
 client_orders.unsuccessfully_paid=Order payment error try again later error write us on email
 ### ADMIN_CARS ###
@@ -202,6 +205,9 @@ notification.not_ordering_car=Error when placing an order. \
   Please try again later or contact us via email
 notification.registered_user=Congratulations on your registration on our website. \
   To your email sent to activate the account click on the link from the letter
+notification.access_denied=Access denied check your access rights or send an email to tech support
+notification.activate_account=To access the information on the page, you must activate your account
+notification.account_blocked=Your account is blocked, access is denied
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
 ### INPUT FIELDS WARNING MESSAGES ###
