add js validation

--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -37,23 +37,35 @@ home.mark_3.text=Five years of excellent experience in this field
 home.mark_4.text=Only current offers and booking confirmation
 ### LOGIN ###
 login.email=EMAIL
+login.email.validation=The email must be like user@company.by
 login.password=PASSWORD
+login.password.validation=The password must be at least 8 characters long and contain at least one \
+  digit and at least one uppercase letter
 login.log_in=LOG IN
 login.no_account=You have no account?
 login.not_authorized=Invalid email or password
 ### REGISTER ###
 register.email=EMAIL
+register.email.validation=The email must be like user@company.by
 register.password=PASSWORD
+register.password.validation=The password must be at least 8 characters long and contain at least one \
+  digit and at least one uppercase letter
 register.confirm_password=CONFIRM PASSWORD
 register.first_name=FIRST NAME
 register.second_name=SECOND NAME
+register.name.validation=The name field cannot be empty and can only contain letters. Maximum length of 20 characters
 register.driver_license=DRIVER LICENSE
+register.driver_license.validation=Cannot be empty and looks like AA****** (old) or *AA****** (new)
 register.phone_number=PHONE NUMBER
+register.phone_number.validation=Not required field, the phone number must contain 12 digits
 register.register=REGISTER
 register.invalid_parameters=Entered parameters not valid. Check your input
+register.invalid_passwords=Passwords don't match
 ### CLIENT_CARS ###
 cars.date_from=Date from
+cars.date_from.validation=Required field, must be less than Date To
 cars.date_to=Date to
+cars.date_to.validation=Required field, must be more than Date From
 cars.type=Car type
 cars.price_range=Price range
 cars.filter=Filter
@@ -171,6 +183,11 @@ create_car.car_type.sedan=Sedan
 create_car.car_type.minivan=Minivan
 create_car.fuel_type.diesel=Diesel
 create_car.fuel_type.petrol=Petrol
+create_car.model.validation=Required field. Length 2 - 100 characters. Valid letters (the Latin alphabet), \
+  numbers, dashes, spaces
+create_car.rent_cost.validation=Required field. A positive integer between 10 and 200
+create_car.number_seats.validation=Required field. A positive integer between 1 and 50
+create_car.fuel_consumption.validation=Required field. A positive integer between 1 and 50
 create_car.create=Create
 ### ORDER ###
 order.date_from=Date from
@@ -210,6 +227,3 @@ notification.activate_account=To access the information on the page, you must ac
 notification.account_blocked=Your account is blocked, access is denied
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
-### INPUT FIELDS WARNING MESSAGES ###
-input.email=The entered string does not match the email address
-input.password=The password must contain at least one Digit and one UpperCase letter, min length 8 symbols
