--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -60,7 +60,12 @@ register.phone_number=PHONE NUMBER
 register.phone_number.validation=Not required field, the phone number must contain 12 digits
 register.register=REGISTER
 register.invalid_parameters=Entered parameters not valid. Check your input
+register.user_exist=A user with this email already exists
 register.invalid_passwords=Passwords don't match
+register.invalid_email=Incorrect Email
+register.invalid_name=Incorrect Name
+register.invalid_drive_license=Incorrect Driver License
+register.invalid_phone_number=Incorrect Phone Number
 ### CLIENT_CARS ###
 cars.date_from=Date from
 cars.date_from.validation=Required field, must be less than Date To
@@ -118,7 +123,6 @@ client_orders.table.pay=PAY
 client_orders.nothing_to_show=You have no any orders
 client_orders.authorize=To order a car please log in
 client_orders.successfully_paid=The order was successfully paid for
-client_orders.unsuccessfully_paid=Order payment error try again later error write us on email
 ### ADMIN_CARS ###
 admin_cars.type=Type
 admin_cars.filter=Filter
@@ -225,5 +229,6 @@ notification.registered_user=Congratulations on your registration on our website
 notification.access_denied=Access denied check your access rights or send an email to tech support
 notification.activate_account=To access the information on the page, you must activate your account
 notification.account_blocked=Your account is blocked, access is denied
+notification.car_not_found=Car not found
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
