--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -225,10 +225,11 @@ notification.ordering_car=You have successfully placed an order in our service. 
 notification.not_ordering_car=Error when placing an order. \
   Please try again later or contact us via email
 notification.registered_user=Congratulations on your registration on our website. \
-  To your email sent to activate the account click on the link from the letter
+  An email was sent to activate the account. To activate your account, follow the link in the letter
 notification.access_denied=Access denied check your access rights or send an email to tech support
 notification.activate_account=To access the information on the page, you must activate your account
 notification.account_blocked=Your account is blocked, access is denied
+notification.order_amount_error=Incorrect data for ordering try again to choose a car
 notification.car_not_found=Car not found
 ### FOOTER ###
 footer.copyright=Copyright &copyCar|Book 2020
