--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -149,6 +149,7 @@ admin_cars.is_available=Is Available
 admin_cars.avail_now=Now:
 admin_cars.avail_change_to_true=Change to: "true"
 admin_cars.avail_change_to_false=Change to: "false"
+admin_cars.invalid_price=Price must be between 10 and 200$
 ### ADMIN_USERS ###
 admin_users.client_status=Client Status
 admin_users.status.any=Any
