--- a/src/main/resources/prop/contentpage_ru.properties
+++ b/src/main/resources/prop/contentpage_ru.properties
@@ -147,7 +147,8 @@ admin_cars.cost=\u0426\u0435\u043D\u0430
 admin_cars.is_available=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u0430?
 admin_cars.avail_now=\u0421\u0435\u0439\u0447\u0430\u0441:
 admin_cars.avail_change_to_true=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043D\u0430: "true"
-admin_cars.avail_change_to_false=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043D: "false"
+admin_cars.avail_change_to_false=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u043D\u0430: "false"
+admin_cars.invalid_price=\u0426\u0435\u043D\u0430 \u0434\u043E\u043B\u0436\u043D\u0430 \u0431\u044B\u0442\u044C \u0432 \u0434\u0438\u0430\u043F\u0430\u0437\u043E\u043D\u0435 \u043E\u0442 10 \u0434\u043E 200$
 ### ADMIN_USERS ###
 admin_users.client_status=\u0421\u0442\u0430\u0442\u0443\u0441 \u043A\u043B\u0438\u0435\u043D\u0442\u0430
 admin_users.status.any=Any
