--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -68,9 +68,9 @@ register.invalid_drive_license=Incorrect Driver License
 register.invalid_phone_number=Incorrect Phone Number
 ### CLIENT_CARS ###
 cars.date_from=Date from
-cars.date_from.validation=Required field, must be less than Date To
+cars.date_from.validation=Required field, must be less or equals than Date To
 cars.date_to=Date to
-cars.date_to.validation=Required field, must be more than Date From
+cars.date_to.validation=Required field, must be more or equals than Date From
 cars.type=Car type
 cars.price_range=Price range
 cars.filter=Filter
