--- a/src/main/resources/prop/contentpage_en.properties
+++ b/src/main/resources/prop/contentpage_en.properties
@@ -39,8 +39,8 @@ home.mark_4.text=Only current offers and booking confirmation
 login.email=EMAIL
 login.email.validation=The email must be like user@company.by
 login.password=PASSWORD
-login.password.validation=The password must be at least 8 characters long and contain at least one \
-  digit and at least one uppercase letter
+login.password.validation=The password length must be from 8 to 30 characters, \
+  use latin letters (at least one uppercase) and digits
 login.log_in=LOG IN
 login.no_account=You have no account?
 login.not_authorized=Invalid email or password
@@ -48,14 +48,14 @@ login.not_authorized=Invalid email or password
 register.email=EMAIL
 register.email.validation=The email must be like user@company.by
 register.password=PASSWORD
-register.password.validation=The password must be at least 8 characters long and contain at least one \
-  digit and at least one uppercase letter
+register.password.validation=The password length must be from 8 to 30 characters, \
+  use latin letters (at least one uppercase) and digits
 register.confirm_password=CONFIRM PASSWORD
 register.first_name=FIRST NAME
 register.second_name=SECOND NAME
 register.name.validation=The name field cannot be empty and can only contain letters. Maximum length of 20 characters
 register.driver_license=DRIVER LICENSE
-register.driver_license.validation=Cannot be empty and looks like AA****** (old) or *AA****** (new)
+register.driver_license.validation=Cannot be empty and looks like AA123456 (old) or 1AA234567 (new)
 register.phone_number=PHONE NUMBER
 register.phone_number.validation=Not required field, the phone number must contain 12 digits
 register.register=REGISTER
@@ -208,14 +208,20 @@ order.amount=Order amount
 order.order_car=Order
 ### PAYMENT ###
 payment.label.card_holder=Card Holder
+payment.card_holder.validation=Includes the first name and surname of the cardholder, the total \
+  length is no more than 40 characters, only latin letters, digits are not allowed
 payment.label.card_number=Card number
+payment.card_number.validation=Card number consists of 16 digits
 payment.label.expiration=Expiration
 payment.label.cvv=CVV
 payment.placeholder.full_name=Jeff Doe
 payment.placeholder.card_number=Your card number
 payment.placeholder.month=MM
+payment.month.validation=Month number from 1 to 12
 payment.placeholder.year=YY
+payment.year.validation=Last 2 digits of the year number, greater than or equal to the current year number
 payment.placeholder.cvv=CVV code
+payment.cvv.validation=Three-digit code on the back of the card
 payment.submit.pay=PAY
 payment.label.payment_error=Incorrect card parameters. Payment failed
 ### NOTIFICATION ###
